Update to 1.18.2
 - Updated Gradle wrapper to 7.4.1
 - Updated Mixin Java version to 17
 - Updated embedded dependencies
 - Removed un-shortened URLs in mod metadata