@@ -1,13 +1,17 @@
 import java.time.Instant
 
 plugins {
-  id("fabric-loom") version "0.10.63"
+  id(/*net.fabricmc.*/ "fabric-loom") version "0.11.32"
   id("net.nemerosa.versioning") version "2.15.1"
-  id("signing")
+  id("org.gradle.signing")
 }
 
 group = "dev.sapphic"
-version = "1.7.1+1.18"
+version = "1.8.0+1.18.2"
+
+if ("CI" in System.getenv()) {
+  version = "$version-${versioning.info.build}"
+}
 
 java {
   withSourcesJar()
@@ -20,7 +24,9 @@ loom {
 
   runs {
     configureEach {
-      property("mixin.debug.export", "true")
+      vmArgs("-Xmx4G", "-XX:+UseZGC")
+
+      property("mixin.debug", "true")
       property("mixin.debug.export.decompile", "false")
       property("mixin.debug.verbose", "true")
       property("mixin.dumpTargetOnFailure", "true")
@@ -39,26 +45,42 @@ repositories {
 }
 
 dependencies {
-  minecraft("com.mojang:minecraft:1.18")
-  mappings(loom.officialMojangMappings())
-  modImplementation("net.fabricmc:fabric-loader:0.12.8")
+  minecraft("com.mojang:minecraft:1.18.2")
+  mappings(loom.layered {
+    officialMojangMappings {
+      nameSyntheticMembers = true
+    }
+  })
+
+  modImplementation("net.fabricmc:fabric-loader:0.13.3")
+
   implementation("org.jetbrains:annotations:23.0.0")
-  implementation("org.checkerframework:checker-qual:3.20.0")
+  implementation("org.checkerframework:checker-qual:3.21.2")
+
+  modImplementation(include(fabricApi.module("fabric-api-base", "0.47.10+1.18.2"))!!)
+  modImplementation(include(fabricApi.module("fabric-networking-api-v1", "0.47.10+1.18.2"))!!)
+
   implementation(include("com.electronwill.night-config:core:3.6.5")!!)
   implementation(include("com.electronwill.night-config:toml:3.6.5")!!)
-  modImplementation(include(fabricApi.module("fabric-api-base", "0.44.0+1.18"))!!)
-  modImplementation(include(fabricApi.module("fabric-networking-api-v1", "0.44.0+1.18"))!!)
-  modRuntimeOnly("com.terraformersmc:modmenu:3.0.0")
+
+  modRuntimeOnly("com.terraformersmc:modmenu:3.1.0")
 }
 
 tasks {
   compileJava {
     with(options) {
-      release.set(8)
-      isFork = true
       isDeprecation = true
       encoding = "UTF-8"
-      compilerArgs.addAll(listOf("-Xlint:all", "-parameters"))
+      isFork = true
+      compilerArgs.addAll(
+          listOf(
+              "-Xlint:all", "-Xlint:-processing",
+              // Enable parameter name class metadata 
+              // https://openjdk.java.net/jeps/118
+              "-parameters"
+          )
+      )
+      release.set(17)
     }
   }
 
@@ -72,55 +94,68 @@ tasks {
     from("/LICENSE")
 
     manifest.attributes(
-      "Build-Timestamp" to Instant.now(),
-      "Build-Revision" to versioning.info.commit,
-      "Build-Jvm" to "${
-        System.getProperty("java.version")
-      } (${
-        System.getProperty("java.vendor")
-      } ${
-        System.getProperty("java.vm.version")
-      })",
-      "Built-By" to GradleVersion.current(),
+        "Build-Timestamp" to Instant.now(),
+        "Build-Revision" to versioning.info.commit,
+        "Build-Jvm" to "${
+          System.getProperty("java.version")
+        } (${
+          System.getProperty("java.vendor")
+        } ${
+          System.getProperty("java.vm.version")
+        })",
+        "Built-By" to GradleVersion.current(),
 
-      "Implementation-Title" to project.name,
-      "Implementation-Version" to project.version,
-      "Implementation-Vendor" to project.group,
+        "Implementation-Title" to project.name,
+        "Implementation-Version" to project.version,
+        "Implementation-Vendor" to project.group,
 
-      "Specification-Title" to "FabricMod",
-      "Specification-Version" to "1.0.0",
-      "Specification-Vendor" to project.group,
+        "Specification-Title" to "FabricMod",
+        "Specification-Version" to "1.0.0",
+        "Specification-Vendor" to project.group,
 
-      "Sealed" to "true"
+        "Sealed" to "true"
     )
   }
 
-  assemble {
-    dependsOn(versionFile)
-  }
-}
+  if (hasProperty("signing.mods.keyalias")) {
+    val alias = property("signing.mods.keyalias")
+    val keystore = property("signing.mods.keystore")
+    val password = property("signing.mods.password")
 
-if (hasProperty("signing.mods.keyalias")) {
-  val alias = property("signing.mods.keyalias")
-  val keystore = property("signing.mods.keystore")
-  val password = property("signing.mods.password")
+    fun Sign.antSignJar(task: Task) = task.outputs.files.forEach { file ->
+      ant.invokeMethod(
+          "signjar", mapOf(
+          "jar" to file,
+          "alias" to alias,
+          "storepass" to password,
+          "keystore" to keystore,
+          "verbose" to true,
+          "preservelastmodified" to true
+      ))
+    }
 
-  listOf(tasks.remapJar, tasks.remapSourcesJar).forEach {
-    it.get().doLast {
-      if (!project.file(keystore!!).exists()) {
-        error("Missing keystore $keystore")
+    val signJar by creating(Sign::class) {
+      dependsOn(remapJar)
+
+      doFirst {
+        antSignJar(remapJar.get())
       }
 
-      val file = outputs.files.singleFile
-      ant.invokeMethod("signjar", mapOf(
-        "jar" to file,
-        "alias" to alias,
-        "storepass" to password,
-        "keystore" to keystore,
-        "verbose" to true,
-        "preservelastmodified" to true
-      ))
-      signing.sign(file)
+      sign(remapJar.get())
+    }
+
+    val signSourcesJar by creating(Sign::class) {
+      dependsOn(remapSourcesJar)
+
+      doFirst {
+        antSignJar(remapSourcesJar.get())
+      }
+
+      sign(remapSourcesJar.get())
+    }
+
+    assemble {
+      dependsOn(signJar, signSourcesJar)
     }
   }
 }
